--- a/ConfigWindow/SetWindow.resx
+++ b/ConfigWindow/SetWindow.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAAAAAAAAAAAAAAAAAAAA
+        AAD///8AAAAAXgAAAJ8AAAChAAAAYP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAABUAAAAuQAA
+        ALkAAACFAAAABgAAAFYAAAD7AAAAtQAAAK8AAABq////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAA
+        AEYAAACZAAAAmwAAAPEAAAB6AAAAjwAAAMP///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8AAAAAqQAAAKkAAACPAAAAwf///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wAAAACnAAAAqQAAAEAAAABk////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AAAAAEgAAABM////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wAAAAAWAAAAiQAAAJ8AAACfAAAAnwAAAJ8AAACfAAAAnwAAAJ8AAACfAAAAnwAA
+        AJ8AAACfAAAAnwAAAHoAAAAK////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AAAAAMUAAADhAAAAsQAAALEAAACxAAAAsQAAALEAAACxAAAAsQAA
+        ALEAAACxAAAAsQAAALEAAACzAAAA7QAAAJn///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AAAAA/QAAAFb///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wAAAACBAAAA0////wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAD/AAAAUv///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AAAAAHwAAADV////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAAAP8AAABS////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAAfAAAANX///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAA/wAA
+        AFL///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAB8AAAA1f//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wAAAAD/AAAAUv///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAA
+        AHwAAADV////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AAAAAP8AAABS////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8AAAAAfAAAAPUAAAC/AAAAvwAAAL8AAAC/AAAAvwAAAL8AAAC7AAAAav///wD///8A////AP//
+        /wD///8A////AP///wD///8AAAAA/wAAAFL///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wAAAAB8AAAA7QAAAJEAAACRAAAAkQAAAJEAAACRAAAAkQAAAJ0AAAD9AAAASP//
+        /wD///8A////AP///wD///8A////AP///wAAAAB+AAAAHP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AAAAAHwAAADV////AP///wD///8A////AP///wD///8A////AAAA
+        AN0AAAB0////AP///wD///8A////AP///wD///8A////AAAAAAb///8AAAAABv///wAAAAAG////AP//
+        /wAAAAAQAAAAEgAAABIAAAASAAAAEgAAABIAAAASAAAAnwAAAMv///8A////AP///wD///8A////AP//
+        /wD///8AAAAA2wAAAHT///8A////AP///wD///8A////AP///wD///8AAAAA5wAAADoAAADtAAAAOAAA
+        AO8AAAAwAAAAUAAAAP8AAAD/AAAA/wAAAP8AAAD/AAAA/wAAAP8AAAD7AAAAWv///wD///8A////AP//
+        /wD///8A////AP///wAAAADbAAAAdP///wD///8A////AP///wD///8A////AP///wAAAAAoAAAABAAA
+        ACgAAAACAAAAKgAAAAIAAAAIAAAAPgAAAIcAAAD1AAAAQAAAAEAAAABAAAAAQAAAAB7///8A////AP//
+        /wD///8A////AP///wD///8A////AAAAANsAAAB0////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AAAAAYAAAAPH///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8AAAAA2wAAAHT///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAABgAAAA8f///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAADbAAAAdP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAAAF4AAADx////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAAANsAAAB0////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAAGAAA
+        AFr///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAA2wAA
+        AHT///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wAAAAACAAAAGgAAAAQAAAAaAAAABAAAABr///8AAAAAFAAAADIAAAAyAAAAMgAAADIAAAAyAAAAMgAA
+        AD4AAADxAAAAZv///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AAAAAEoAAADbAAAAUAAAANcAAABUAAAA0f///wAAAACxAAAA/wAAAP8AAAD/AAAA/wAA
+        AP8AAAD/AAAA/wAAAMsAAAAO////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AAAAAA7///8AAAAADgAAAAIAAAAO////AAAAAAwAAAAgAAAAIAAA
+        ACAAAAAgAAAAIAAAACAAAAAc////AP///wD///8A////AP///wAAAABKAAAAPv///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAqAAAAQAAAALMAAACf////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAAAIsAAADDAAAAsQAA
+        AKH///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8AAAAAiwAA
+        AMUAAACHAAAA6wAAAJEAAACRAAAAPP///wD///8A////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wAAAAAuAAAAgwAA
+        AIMAAADfAAAAoQAAAAoAAACRAAAAwQAAAMEAAABS////AP///wD///8A////AP///wD///8A////AP//
+        /wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AP///wD///8A////AAAA
+        AFgAAADPAAAAzwAAAKUAAAAUz///8Y////E////8P////P////////////////gAP//wAA//9//P//f/
+        7//3/+//9//v//f/7//3/+Af9//gD///7+///8/v9WAf7//z/+//+//v//v/7//7/+/////v////7//6
+        oA///////////z////w////8D///8I////E=
+</value>
+  </data>
 </root>
